--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 
   <!-- Correct relative paths to stylesheets -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> 
-  <link href="/static/styles.scss" rel="stylesheet">
+  <link href="static/styles.scss" rel="stylesheet">
    <link href="/static/skeleton/normalize.css" rel="stylesheet">
    <link href="/static/skeleton/skeleton.css" rel="stylesheet">
    
@@ -35,7 +35,24 @@
     </div>
 </nav>
 
+<style>
+      .me {
+      max-width: 100%;
+      width: 100%;
+      height: 300px;
+      object-fit: cover;
+      display: block;
+      margin-bottom: 10px;
+      margin-top: 10px;
+    }
+
+</style>
+
+<img src="static/imgs/me.jpg" alt="me" class="me" >
+
 <div class="container">
+
+  
 
   <!-- columns should be the immediate child of a .row -->
   <div class="row">
@@ -46,7 +63,7 @@
       <div class="eight columns">
           <p>I grew up in the northern part of Brazil on the edge of the Amazon, surrounded by nature in the city of Belém. I am passionate about making cities a place where every species can feel part of the landscape and enjoy it equally. 
 
-              Currently, I am captivated by the concept of "urban habitats" — pockets of space that foster diverse ecological interactions, ultimately enhancing the lives of all species within a city (not just humans). My aspiration is to construct numerous urban habitats, effectively blurring the boundaries between nature and the cityscape </p>
+              Currently, I am captivated by the concept of "urban habitats" — pockets of space that foster diverse ecological interactions, ultimately enhancing the lives of all species within a city (not just humans). </p>
       </div>
   </div>
 
