--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 		  	<div class="d-flex flex-row">
 		  		<a a href="about.html" class="d-flex flex-row" style="text-decoration: none; color: inherit;">
-          <img src="https://img.icons8.com/color/100/000000/folder-invoices.png" width="40" />
+            <img width="48" height="48" src="static/imgs/folder/1.png" alt="folder-invoices--v1"/>
 		  		<div class="ml-2">
 		  			<h6 class="mb-0">1: Introduction & Documentation</h6>
 		  			<div class="about">
@@ -73,7 +73,7 @@
 
 		  	<div class="d-flex flex-row">
 		  		<a a href="#" class="d-flex flex-row" style="text-decoration: none; color: inherit;">
-          <img src="https://img.icons8.com/color/100/000000/folder-invoices.png" width="40" />
+            <img width="48" height="48" src="static/imgs/folder/2.png" alt="folder-invoices--v1"/>
 		  		<div class="ml-2">
 		  			<h6 class="mb-0">2: 2D Design & Cutting</h6>
 		  			<div class="about">
@@ -90,7 +90,7 @@
 
 		  	<div class="d-flex flex-row">
 		  		<a a href="" class="d-flex flex-row" style="text-decoration: none; color: inherit;">
-          <img src="https://img.icons8.com/color/100/000000/folder-invoices.png" width="40" />
+            <img width="48" height="48" src="static/imgs/folder/3.png" alt="folder-invoices--v1"/>
 		  		<div class="ml-2">
 		  			<h6 class="mb-0">3: Hand tools and fabrication</h6>
 		  			<div class="about">
@@ -107,7 +107,7 @@
 
 		  	<div class="d-flex flex-row">
 		  		<a a href="about.html" class="d-flex flex-row" style="text-decoration: none; color: inherit;">
-          <img src="https://img.icons8.com/color/100/000000/folder-invoices.png" width="40" />
+            <img width="48" height="48" src="static/imgs/folder/4.png" alt="folder-invoices--v1"/>
 		  		<div class="ml-2">
 		  			<h6 class="mb-0">4: Microcontroller Programming</h6>
 		  			<div class="about">
@@ -124,7 +124,7 @@
 
 		  	<div class="d-flex flex-row">
 		  		<a a href="about.html" class="d-flex flex-row" style="text-decoration: none; color: inherit;">
-          <img src="https://img.icons8.com/color/100/000000/folder-invoices.png" width="40" />
+            <img width="48" height="48" src="static/imgs/folder/5.png" alt="folder-invoices--v1"/>
 		  		<div class="ml-2">
 		  			<h6 class="mb-0">5: 3D Design & Printing</h6>
 		  			<div class="about">
@@ -142,7 +142,7 @@
 
 		  	<div class="d-flex flex-row">
 		  		<a a href="about.html" class="d-flex flex-row" style="text-decoration: none; color: inherit;">
-          <img src="https://img.icons8.com/color/100/000000/folder-invoices.png" width="40" />
+            <img width="48" height="48" src="static/imgs/folder/6.png" alt="folder-invoices--v1"/>
 		  		<div class="ml-2">
 		  			<h6 class="mb-0">6: Electronic Input Devices</h6>
 		  			<div class="about">
@@ -159,7 +159,7 @@
 
         <div class="d-flex flex-row">
 		  		<a a href="about.html" class="d-flex flex-row" style="text-decoration: none; color: inherit;">
-          <img src="https://img.icons8.com/color/100/000000/folder-invoices.png" width="40" />
+            <img width="48" height="48" src="static/imgs/folder/7.png" alt="folder-invoices--v1"/>
 		  		<div class="ml-2">
 		  			<h6 class="mb-0">7: Electronic Output Devices</h6>
 		  			<div class="about">
@@ -176,7 +176,7 @@
       <li class="list-group-item d-flex justify-content-between align-content-center">
         <div class="d-flex flex-row">
 		  		<a a href="about.html" class="d-flex flex-row" style="text-decoration: none; color: inherit;">
-          <img src="https://img.icons8.com/color/100/000000/folder-invoices.png" width="40" />
+            <img width="48" height="48" src="static/imgs/folder/8.png" alt="folder-invoices--v1"/>
 		  		<div class="ml-2">
 		  			<h6 class="mb-0">8: CNC Milling</h6>
 		  			<div class="about">
@@ -194,7 +194,7 @@
 
         <div class="d-flex flex-row">
 		  		<a a href="about.html" class="d-flex flex-row" style="text-decoration: none; color: inherit;">
-          <img src="https://img.icons8.com/color/100/000000/folder-invoices.png" width="40" />
+            <img width="48" height="48" src="static/imgs/folder/9.png" alt="folder-invoices--v1"/>
 		  		<div class="ml-2">
 		  			<h6 class="mb-0">9: Radio, WiFi, Bluetooth (IoT)</h6>
 		  			<div class="about">
@@ -212,7 +212,7 @@
 
         <div class="d-flex flex-row">
 		  		<a a href="about.html" class="d-flex flex-row" style="text-decoration: none; color: inherit;">
-          <img src="https://img.icons8.com/color/100/000000/folder-invoices.png" width="40" />
+            <img width="48" height="48" src="static/imgs/folder/10.png" alt="folder-invoices--v1"/>
 		  		<div class="ml-2">
 		  			<h6 class="mb-0">10: Machine Building and End Effectors</h6>
 		  			<div class="about">
@@ -230,7 +230,7 @@
 
         <div class="d-flex flex-row">
 		  		<a a href="about.html" class="d-flex flex-row" style="text-decoration: none; color: inherit;">
-          <img src="https://img.icons8.com/color/100/000000/folder-invoices.png" width="40" />
+            <img width="48" height="48" src="static/imgs/folder/11.png" alt="folder-invoices--v1"/>
 		  		<div class="ml-2">
 		  			<h6 class="mb-0">11: Project Integration</h6>
 		  			<div class="about">
@@ -247,7 +247,7 @@
 
         <div class="d-flex flex-row">
 		  		<a a href="about.html" class="d-flex flex-row" style="text-decoration: none; color: inherit;">
-          <img src="https://img.icons8.com/color/100/000000/folder-invoices.png" width="40" />
+            <img width="48" height="48" src="static/imgs/folder/12.png" alt="folder-invoices--v1"/>
 		  		<div class="ml-2">
 		  			<h6 class="mb-0">12: Machine Demo</h6>
 		  			<div class="about">
@@ -265,7 +265,7 @@
 
         <div class="d-flex flex-row">
 		  		<a a href="about.html" class="d-flex flex-row" style="text-decoration: none; color: inherit;">
-          <img src="https://img.icons8.com/color/100/000000/folder-invoices.png" width="40" />
+            <img width="48" height="48" src="static/imgs/folder/13.png" alt="folder-invoices--v1"/>
 		  		<div class="ml-2">
 		  			<h6 class="mb-0">13: Interface Design</h6>
 		  			<div class="about">
@@ -283,7 +283,7 @@
 
         <div class="d-flex flex-row">
 		  		<a a href="about.html" class="d-flex flex-row" style="text-decoration: none; color: inherit;">
-          <img src="https://img.icons8.com/color/100/000000/folder-invoices.png" width="40" />
+            <img width="48" height="48" src="static/imgs/folder/14.png" alt="folder-invoices--v1"/>4
 		  		<div class="ml-2">
 		  			<h6 class="mb-0">14: Project Prep</h6>
 		  			<div class="about">
@@ -301,7 +301,7 @@
 
         <div class="d-flex flex-row">
 		  		<a a href="about.html" class="d-flex flex-row" style="text-decoration: none; color: inherit;">
-          <img src="https://img.icons8.com/color/100/000000/folder-invoices.png" width="40" />
+            <img width="48" height="48" src="static/imgs/folder/15.png" alt="folder-invoices--v1"/>
 		  		<div class="ml-2">
 		  			<h6 class="mb-0">Final Project</h6>
 		  			<div class="about">
