--- a/about.html
+++ b/about.html
@@ -68,6 +68,33 @@
   </div>
 
 
+  
+  <div class="row">
+    <ul>
+      <div class="twelve columns">
+          <h5>Final Project ideas:</h5>
+      </div>
+    </ul>
+    <ul>
+      <div class="twelve columns">
+          <h6>Custom <a href="https://www.zdnet.com/article/this-device-recycles-plastic-water-bottles-into-3d-printing-filament-and-its-open-source/">3d printer filament maker</a>.</h6>
+      </div>
+    </ul>
+
+    <ul>
+    <div class="twelve columns">
+        <h6>Custom <a href="http://www.keep-art.co.uk/Self_build.html">clay extruder</a>.</h6>
+    </div>
+  </ul>
+  <ul>
+    <div class="twelve columns">
+        <h6>Computer Vision <a href="https://www.zdnet.com/article/this-device-recycles-plastic-water-bottles-into-3d-printing-filament-and-its-open-source/">material composition calculator</a>.</h6>  
+    </div>
+  </ul>
+
+  
+</div>
+
 </div>
 
 
