--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
   </ul>
   <ul>
     <div class="twelve columns">
-        <h6>Computer Vision <a href="https://www.zdnet.com/article/this-device-recycles-plastic-water-bottles-into-3d-printing-filament-and-its-open-source/">material composition calculator</a>.</h6>  
+        <h6>Computer Vision <a href="static/imgs/IMG_8693.jpg">material composition calculator</a>.</h6>  
     </div>
   </ul>
 
