--- a/exercise2.html
+++ b/exercise2.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -34,9 +35,9 @@
     }
 
     .scaled-up {
-        max-width: 750px; /* Adjust the maximum width of the first image */
-        width: 200%; /* Ensure the image fills the entire container width */
-        height: auto; /* Maintain aspect ratio */
+        min-width: 700px;
+        width: 100%; 
+        height: auto; 
     }
 
     .container p{
