--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 		  		<div class="ml-2">
 		  			<h6 class="mb-0">2: 2D Design & Cutting</h6>
 		  			<div class="about">
-		  				<span>Jan 31, 2024</span>
+		  				<span>Feb 2nd, 2024</span>
 		  			</div>
 		  		</div>
           </a>
@@ -89,12 +89,12 @@
       <li class="list-group-item d-flex justify-content-between align-content-center">
 
 		  	<div class="d-flex flex-row">
-		  		<a a href="" class="d-flex flex-row" style="text-decoration: none; color: inherit;">
+		  		<a a href="exercise3.html" class="d-flex flex-row" style="text-decoration: none; color: inherit;">
             <img width="48" height="48" src="static/imgs/folder/3.png" alt="folder-invoices--v1"/>
 		  		<div class="ml-2">
 		  			<h6 class="mb-0">3: Hand tools and fabrication</h6>
 		  			<div class="about">
-		  				<span>Jan 31, 2024</span>
+		  				<span>Valentine's Day</span>
 		  			</div>
 		  		</div>
           </a>
