--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <li class="list-group-item d-flex justify-content-between align-content-center">
 
 		  	<div class="d-flex flex-row">
-		  		<a a href="about.html" class="d-flex flex-row" style="text-decoration: none; color: inherit;">
+		  		<a href="exercise4.html" class="d-flex flex-row" style="text-decoration: none; color: inherit;">
             <img width="48" height="48" src="static/imgs/folder/4.png" alt="folder-invoices--v1"/>
 		  		<div class="ml-2">
 		  			<h6 class="mb-0">4: Microcontroller Programming</h6>
