--- a/index.html
+++ b/index.html
@@ -103,23 +103,23 @@
 		  	</div>
 
 		  </li>
-      <li class="list-group-item d-flex justify-content-between align-content-center">
+		  <li class="list-group-item d-flex justify-content-between align-content-center">
 
-		  	<div class="d-flex flex-row">
-		  		<a href="exercise4.html" class="d-flex flex-row" style="text-decoration: none; color: inherit;">
-            <img width="48" height="48" src="static/imgs/folder/4.png" alt="folder-invoices--v1"/>
-		  		<div class="ml-2">
-		  			<h6 class="mb-0">4: Microcontroller Programming</h6>
-		  			<div class="about">
-		  				<span>Jan 31, 2024</span>
-		  			</div>
-		  		</div>
-          </a>
-		  	</div>
-		  	<div class="check">
-		  	</div>
+			<div class="d-flex flex-row">
+				<a a href="exercise4.html" class="d-flex flex-row" style="text-decoration: none; color: inherit;">
+		  <img width="48" height="48" src="static/imgs/folder/4.png" alt="folder-invoices--v1"/>
+				<div class="ml-2">
+					<h6 class="mb-0">4: Microcontroller Programming</h6>
+					<div class="about">
+						<span>Feb 23rd, 2024</span>
+					</div>
+				</div>
+		</a>
+			</div>
+			<div class="check">
+			</div>
 
-		  </li>
+		</li>
       <li class="list-group-item d-flex justify-content-between align-content-center">
 
 		  	<div class="d-flex flex-row">
