--- a/exercise4.html
+++ b/exercise4.html
@@ -84,7 +84,7 @@
         <div class="container">
             <div class="row">
                 
-                <h5>Part 1: New Idea! </h5>
+                <h5>New Idea! </h5>
                 <div class="col-md-6">
                     <img class="img-fluid" src="static/imgs/week4/2.jpg">
                 </div>
@@ -189,7 +189,7 @@
         
         <div class="container">
             <div class="row col">
-                <h5>Part 3: Not what I expected</h5>
+                <h5>Not what I expected</h5>
                 <div class="col-md-6">
                     <img class="img-fluid max-height" src="static/imgs/week4/gif/1.gif">
             </div>
