--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       <li class="list-group-item d-flex justify-content-between align-content-center">
 
 		  	<div class="d-flex flex-row">
-		  		<a a href="about.html" class="d-flex flex-row" style="text-decoration: none; color: inherit;">
+		  		<a a href="exercise5.html" class="d-flex flex-row" style="text-decoration: none; color: inherit;">
             <img width="48" height="48" src="static/imgs/folder/5.png" alt="folder-invoices--v1"/>
 		  		<div class="ml-2">
 		  			<h6 class="mb-0">5: 3D Design & Printing</h6>
