--- a/exercise5.html
+++ b/exercise5.html
@@ -198,7 +198,7 @@
                 
                 </div>
             </div>   
-            <p > And for my 3D scan, I scaned a flower🌼</p>
+            <p > And for my 3D scan, I scaned a flowergi🌼</p>
         </div>
     </div>
 
