--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 		  		<div class="ml-2">
 		  			<h6 class="mb-0">5: 3D Design & Printing</h6>
 		  			<div class="about">
-		  				<span>Jan 31, 2024</span>
+		  				<span>Feb 27th, 2024</span>
 		  			</div>
 		  		</div>
           </a>
@@ -141,12 +141,12 @@
       <li class="list-group-item d-flex justify-content-between align-content-center">
 
 		  	<div class="d-flex flex-row">
-		  		<a a href="about.html" class="d-flex flex-row" style="text-decoration: none; color: inherit;">
+		  		<a a href="excercise6.html" class="d-flex flex-row" style="text-decoration: none; color: inherit;">
             <img width="48" height="48" src="static/imgs/folder/6.png" alt="folder-invoices--v1"/>
 		  		<div class="ml-2">
 		  			<h6 class="mb-0">6: Electronic Input Devices</h6>
 		  			<div class="about">
-		  				<span>Jan 31, 2024</span>
+		  				<span>Mar 7th, 2024</span>
 		  			</div>
 		  		</div>
           </a>
