--- a/exercise7.html
+++ b/exercise7.html
@@ -137,7 +137,7 @@
         <div class="container">
             <div class="row col d-flex align-items-stretch">
 
-                <h5>Flower</h5>
+                <h5>Flower or Fossil?</h5>
 
                 <div class="col-md-6">
                         <img class="img-fluid max-height" src="static/imgs/week8/2.jpg">
