--- a/Final.html
+++ b/Final.html
@@ -37,7 +37,7 @@
     }
 
     .scaled-up {
-        min-width: 700px;
+        min-width: 800px;
         width: 100%; 
         height: auto; 
     }
@@ -89,13 +89,25 @@
                 
                 <h5>Let the plant read your aura.</h5>
                 <div class="col-md-6">
-                    <video width="640" height="360" controls autoplay>
+
+                    <img class="scaled-up" src="static/imgs/final/imgs/diagram1-02.png">
+
+
+                    <video width="800" height="360" controls autoplay>
+                        <source src="static/imgs/final/videos/2.1.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>  
+                    <p></p>
+                
+                <h5>Then receive a hand-written note.</h5>
+
+                    <video width="800" height="360" controls autoplay>
                         <source src="static/imgs/final/videos/1.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>  
             </div>
-            <p> Depending on your touch!
-            </p>
+            <h5> It all depends on your touch!
+            </h5>
 
         </div>
 
