--- a/index.html
+++ b/index.html
@@ -193,12 +193,12 @@
       <li class="list-group-item d-flex justify-content-between align-content-center">
 
         <div class="d-flex flex-row">
-		  		<a a href="about.html" class="d-flex flex-row" style="text-decoration: none; color: inherit;">
+		  		<a a href="https://bkazer.github.io/PS70/09_networking/index.html" class="d-flex flex-row" style="text-decoration: none; color: inherit;">
             <img width="48" height="48" src="static/imgs/folder/9.png" alt="folder-invoices--v1"/>
 		  		<div class="ml-2">
 		  			<h6 class="mb-0">9: Radio, WiFi, Bluetooth (IoT)</h6>
 		  			<div class="about">
-		  				<span>Jan 31, 2024</span>
+		  				<span>Apr 2, 2024</span>
 		  			</div>
 		  		</div>
           </a>
@@ -211,12 +211,12 @@
       <li class="list-group-item d-flex justify-content-between align-content-center">
 
         <div class="d-flex flex-row">
-		  		<a a href="about.html" class="d-flex flex-row" style="text-decoration: none; color: inherit;">
+		  		<a a href="https://k-ra.github.io/PS70/10_machine/week10.html" class="d-flex flex-row" style="text-decoration: none; color: inherit;">
             <img width="48" height="48" src="static/imgs/folder/10.png" alt="folder-invoices--v1"/>
 		  		<div class="ml-2">
 		  			<h6 class="mb-0">10: Machine Building and End Effectors</h6>
 		  			<div class="about">
-		  				<span>Jan 31, 2024</span>
+		  				<span>Apr 18, 2024</span>
 		  			</div>
 		  		</div>
           </a>
@@ -226,76 +226,6 @@
 
       </li>
 
-      <li class="list-group-item d-flex justify-content-between align-content-center">
-
-        <div class="d-flex flex-row">
-		  		<a a href="about.html" class="d-flex flex-row" style="text-decoration: none; color: inherit;">
-            <img width="48" height="48" src="static/imgs/folder/11.png" alt="folder-invoices--v1"/>
-		  		<div class="ml-2">
-		  			<h6 class="mb-0">11: Project Integration</h6>
-		  			<div class="about">
-		  				<span>Jan 31, 2024</span>
-		  			</div>
-		  		</div>
-          </a>
-		  	</div>
-		  	<div class="check">
-		  	</div>
-      </li>
-
-      <li class="list-group-item d-flex justify-content-between align-content-center">
-
-        <div class="d-flex flex-row">
-		  		<a a href="about.html" class="d-flex flex-row" style="text-decoration: none; color: inherit;">
-            <img width="48" height="48" src="static/imgs/folder/12.png" alt="folder-invoices--v1"/>
-		  		<div class="ml-2">
-		  			<h6 class="mb-0">12: Machine Demo</h6>
-		  			<div class="about">
-		  				<span>Jan 31, 2024</span>
-		  			</div>
-		  		</div>
-          </a>
-		  	</div>
-		  	<div class="check">
-		  	</div>
-
-      </li>
-
-      <li class="list-group-item d-flex justify-content-between align-content-center">
-
-        <div class="d-flex flex-row">
-		  		<a a href="about.html" class="d-flex flex-row" style="text-decoration: none; color: inherit;">
-            <img width="48" height="48" src="static/imgs/folder/13.png" alt="folder-invoices--v1"/>
-		  		<div class="ml-2">
-		  			<h6 class="mb-0">13: Interface Design</h6>
-		  			<div class="about">
-		  				<span>Jan 31, 2024</span>
-		  			</div>
-		  		</div>
-          </a>
-		  	</div>
-		  	<div class="check">
-		  	</div>
-
-      </li>
-
-      <li class="list-group-item d-flex justify-content-between align-content-center">
-
-        <div class="d-flex flex-row">
-		  		<a a href="about.html" class="d-flex flex-row" style="text-decoration: none; color: inherit;">
-            <img width="48" height="48" src="static/imgs/folder/14.png" alt="folder-invoices--v1"/>4
-		  		<div class="ml-2">
-		  			<h6 class="mb-0">14: Project Prep</h6>
-		  			<div class="about">
-		  				<span>Jan 31, 2024</span>
-		  			</div>
-		  		</div>
-          </a>
-		  	</div>
-		  	<div class="check">
-		  	</div>
-
-      </li>
 
       <li class="list-group-item d-flex justify-content-between align-content-center">
 
